--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -1,57 +1,56 @@
-{% extends 'rest/base.html' %}
-
 <!DOCTYPE html>
+{% extends 'rest/base.html' %}
 
 {% block content %}
 
-<body>
-        <style>
-                table {
-                        border: 1px solid #ec720d;
-                }
-        </style>
-        <div class='container' align='center' style='margin-top:20px'>
-                <h1>R.I.P</h1>
-                <h3>Restaurant In Program</h3>
-        </div>
-        <div style='margin-top:50px'></div>
 
-        <table border="1" bordercolor="blue" width="auto" height="350" align="center">
-                <tr align="center">
-                        <td width="140">REST_IMAGE</td>
-                        <td>REST_NAME</td>
-                        <td>REST_ADDR</td>
-                        <td>REST_CATE</td>
-                        <td>REST_DIST</td>
-                </tr>
-                {% for data in asc_data %}
-                <tr height="180" align='center'>
-                        <td><img src="\static\icon\sashimi.png"></td>
-                        <td>{{data.2}}</td>
-                        <td>{{data.1}}</td>
-                        <td>{{data.4}}</td>
-                        <td>{{data.8}}m</td>
+<style>
+        table {
+                border: 1px solid #ec720d;
+        }
+</style>
+<div class='container' align='center' style='margin-top:20px'>
+        <h1>R.I.P</h1>
+        <h3>Restaurant In Program</h3>
+</div>
+<div style='margin-top:50px'></div>
 
-                </tr>
-                {% endfor %}
+<table border="1" width="auto" height="350" align="center">
+        <tr align="center">
+                <td width="140">REST_IMAGE</td>
+                <td>REST_NAME</td>
+                <td>REST_ADDR</td>
+                <td>REST_CATE</td>
+                <td>REST_DIST</td>
+        </tr>
+        {% for data in asc_data %}
+        <tr height="180" align='center'>
+                <td><img src="\static\icon\sashimi.png"></td>
+                <td>{{data.2}}</td>
+                <td>{{data.1}}</td>
+                <td>{{data.4}}</td>
+                <td>{{data.8}}m</td>
 
-                <tr>
-                        <ul class="pagination">
-                                {% for i in leng %}
-                                {% if no == i %}
-                                <li class="page-item active" aria-current="page"><span class="page-link">{{i}}<span class="sr-only"></span></span></li>
-                                {% else %}
-                                <li class="page-item"><a class="page-link" href="?no={{i}}">{{i}}</a></li>
-                                {% endif %}
-                                {% endfor %}
-                        </ul>
-                </tr>
+        </tr>
+        {% endfor %}
 
-        </table>
-        
-               
-        
-</body>
+        <tr>
+                <ul class="pagination">
+                        {% for i in leng %}
+                        {% if no == i %}
+                        <li class="page-item active" aria-current="page"><span class="page-link">{{i}}<span
+                                                class="sr-only"></span></span></li>
+                        {% else %}
+                        <li class="page-item"><a class="page-link" href="?no={{i}}">{{i}}</a></li>
+                        {% endif %}
+                        {% endfor %}
+                </ul>
+        </tr>
 
-</html>
+</table>
+
+
+
+
+
 {% endblock %}
