--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -1,84 +1,37 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v3.8.6">
-    <link href="static/css/mystyle.css" rel="stylesheet" />
-    <title>Home</title>
-    <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
-    <link rel='icon' type='image/png' sizes='16x16' href='/static/icon/menu.png'>
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/cover/">
+{% extends 'rest/base.html' %}
+{% block content %}
 
-    <!-- Bootstrap core CSS -->
-<link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
-<meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
-<meta name="theme-color" content="#563d7c">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
-    
-  </head>
-
-  <body class="text-center" >
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="masthead mb-auto">
-    <div class="inner">
+<div class="text-center" >
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="masthead mb-auto">
+      <div class="inner">
         <div class="title">
-            <h1>R . I . P</h1>
-            <span class="byline">Restaurant In Program</span> </div>
-      <nav class="nav nav-masthead justify-content-center">
-      </nav>
-    </div>
-  </header>
+          <h1>R . I . P</h1>
+          <span class="byline">Restaurant In Program</span>
+        </div>
+        
+      </div>
+    </header>
 
-    <h3 class="cover-heading" style='margin-top:60px'>Welcome</h3>
+    <h3 class="cover-heading" style='margin-top:30px'>Welcome</h3>
     <p class="lead">This is the site for your LunchTime more effective</p>
     <p class="lead">
-            <div class='container' width='600px' style='margin-top:80px'>
-                
-            
-                    <img src="/static/icon/menu1.png" a href='detail'><br><br>
-            
-                </div>
-                <div >
-      <a href="index" style='width:200px' class="btn btn-lg btn-secondary" onclick="location.href='/rest/index'">Browse the page</a>
-    </div>
-    </p>
-  </main>
+      <div class='container' width='600px' style='margin-top:40px'>
 
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>you will get enough time with this program </p>
-    </div>
-  </footer>
+
+        <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'">
+
+      </div>
+      
+    </p>
+    </main>
+
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>you will get enough time with this program </p>
+      </div>
+    </footer>
+  </div>
 </div>
-</body>
-</html>
+{% endblock %}
