--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -45,9 +45,9 @@
 
 <body>
   <div class='container' align='center' style='margin-top:80px'>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <img type='image/png' sizes='32x32' src='/static/icon/menu2.png'/>
-      <a class="navbar-brand" href="/rest/home"  >R.I.P</a>
+    <nav class="navbar navbar-expand navbar-light bg-secondary fixed-top" >
+      <img type='image/png' width="32" height="32" src='/static/icon/menu2.png'/>
+      <a class="navbar-brand" href="/rest/home" style="margin-left:10px;"><font size='6' face='바탕' color='purple'>R.I.P</font></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,22 +59,22 @@
             <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index">index</a>
+            <a class="nav-link" href="index">Index</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="board" aria-disabled="true">Recommend</a>
+            <a class="nav-link" href="board" aria-disabled="true">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="detail">Detail</a>
+            <a class="nav-link" href="search">Search</a>
           </li>
         </ul>
       </div>
 
 
-      <!-- <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search Restaurant" aria-label="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit"><a href="detail">Search</a></button>
-      </form> -->
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit"><a href="Board">Search</a></button>
+      </form>
 
     </nav>
   </div>
