--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -45,13 +45,13 @@
 
 <body>
   <div class='container' align='center' style='margin-top:80px'>
-    <nav class="navbar navbar-expand navbar-light bg-secondary fixed-top" >
+    <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top" >
       <img type='image/png' width="32" height="32" src='/static/icon/menu2.png'/>
-      <a class="navbar-brand" href="/rest/home" style="margin-left:10px;"><font size='6' face='바탕' color='purple'>R.I.P</font></a>
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+      <a class="navbar-brand" href="/rest/home" style="margin-left:10px;"><font size='6' face='바탕' color='White'>R.I.P</font></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button> -->
+      </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -73,7 +73,7 @@
 
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search Restaurant" aria-label="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit"><a href="Board">Search</a></button>
+        <button class="btn btn-outline-secondary " type="submit" onclick='location.href="Board"'>Search</button>
         
       </form>
 
