--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -39,7 +39,7 @@
 
 
 </table>
-<nav style='width:auto;'>
+<nav>
         <ul class="pagination">
                 <li class="page-item">
                         {% if no != 1 %}
