--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -56,24 +56,24 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="home">홈화면<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index">Index</a>
+            <a class="nav-link" href="index">기능</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="board" aria-disabled="true">Board</a>
+            <a class="nav-link" href="board" aria-disabled="true">음식점 리스트</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="search">Search</a>
+            <a class="nav-link" href="search">검색</a>
           </li>
         </ul>
       </div>
 
 
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search Restaurant" aria-label="Search">
-        <button class="btn btn-outline-secondary " type="submit" onclick='location.href="Board"'>Search</button>
+        <input class="form-control mr-sm-2" type="text" placeholder="음식점을 검색하세요" aria-label="Search">
+        <button class="btn btn-outline-secondary " type="submit" onclick='location.href="board"'>검색</button>
         
       </form>
 
