--- a/templates/rest/board.html
+++ b/templates/rest/board.html
@@ -3,81 +3,118 @@
 
 {% block content %}
 
+<table style='width:100%;'>
+        <td style='width:25%; text-align: center;'>
+                &nbsp;<img src="\static\icon\sashimi.png"><br><br>
+                &nbsp;<img src="\static\icon\burger.png"><br><br>
+                &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
+                &nbsp;<img src="\static\icon\kimchi.png"><br><br>
+                &nbsp;<img src="\static\icon\rice.png"><br /><br>
+                &nbsp;<img src="\static\icon\noodles.png"><br><br>
+                &nbsp;<img src="\static\icon\sashimi.png"><br><br>
+                &nbsp;<img src="\static\icon\burger.png"><br><br>
+                &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
+                &nbsp;<img src="\static\icon\kimchi.png"><br><br>
+                &nbsp;<img src="\static\icon\rice.png"><br /><br>
+                &nbsp;<img src="\static\icon\noodles.png">
+        </td>
+        <td align= 'center'>
+                <style>
+                        table {
+                                border: 1px solid #ec720d;
+                        }
+                </style>
+                <div class='container' align='center' style='margin-top:20px'>
+                        <font size="50em" face="바탕" color="Black">R . I . P <br><img type='image/png' width="60"
+                                        height="60" src='/static/icon/menu2.png' />&nbsp;Restaurant&nbsp; In&nbsp;
+                                Program</font>&nbsp;
+                        <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;
+                </div>
+                <div style='margin-top:50px'></div>
 
-<style>
-        table {
-                border: 1px solid #ec720d;
-        }
-</style>
-<div class='container' align='center' style='margin-top:20px'>
-        <h1>R.I.P</h1>
-        <h3>Restaurant In Program</h3>
-</div>
-<div style='margin-top:50px'></div>
+                <table border="1" width="auto" height="350" align="center">
+                        <tr align="center">
+                                <td width="140">이미지</td>
+                                <td>식당명</td>
+                                <td>주소</td>
+                                <td width="80">카테고리</td>
+                                <td width="80">거리</td>
+                        </tr>
+                        {% for data in asc_data %}
+                        <tr height="180" align='center'>
+                                <td><img src="\static\icon\sashimi.png"></td>
+                                <td>{{data.2}}</td>
+                                <td>{{data.1}}</td>
+                                <td>{{data.4}}</td>
+                                <td>{{data.8}}m</td>
 
-<table border="1" width="auto" height="350" align="center">
-        <tr align="center">
-                <td width="140">REST_IMAGE</td>
-                <td>REST_NAME</td>
-                <td>REST_ADDR</td>
-                <td>REST_CATE</td>
-                <td>REST_DIST</td>
-        </tr>
-        {% for data in asc_data %}
-        <tr height="180" align='center'>
-                <td><img src="\static\icon\sashimi.png"></td>
-                <td>{{data.2}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.4}}</td>
-                <td>{{data.8}}m</td>
-
-        </tr>
-        {% endfor %}
+                        </tr>
+                        {% endfor %}
 
 
 
 
+
+                </table>
+                <div style='display: inline-block;margin-top: 20px;'>
+                        
+                                <ul class="pagination" >
+                                        <li class="page-item">
+                                                {% if no != 1 %}
+                                                <a class="page-link" href="?no={{subno}}" aria-label="Previous">
+                                                        <span aria-hidden="true">&laquo;</span>
+                                                </a>
+                                                {% endif %}
+                                        </li>
+                                        <ul class="pagination">
+
+                                                {% for i in ran10 %}
+
+                                                {% if no == i %}
+                                                <li class="page-item active" aria-current="page"><span
+                                                                class="page-link">{{i}}<span
+                                                                        class="sr-only"></span></span></li>
+                                                {% else %}
+                                                <li class="page-item"><a class="page-link" href="?no={{i}}">{{i}}</a>
+                                                </li>
+                                                {% endif %}
+
+
+
+
+                                                {% endfor %}
+                                        </ul>
+
+                                        <li class="page-item">
+                                                {% if no != leng %}
+                                                <a class="page-link" href="?no={{addno}}" aria-label="Next">
+                                                        <span aria-hidden="true">&raquo;</span>
+
+
+                                                </a>
+                                                {% endif %}
+                                        </li>
+                                </ul>
+                        
+                </div>
+        </td>
+        <td style='width:25%; text-align: center;'>
+                &nbsp;<img src="\static\icon\rice.png"><br /><br>
+                &nbsp;<img src="\static\icon\spaghetti.png"><br /><br>
+                &nbsp;<img src="\static\icon\taco.png"><br /><br>
+                &nbsp;<img src="\static\icon\takoyaki.png"><br /><br>
+                &nbsp;<img src="\static\icon\tempura.png"><br /><br>
+                &nbsp;<img src="\static\icon\onigiri.png"><br><br>
+                &nbsp;<img src="\static\icon\rice.png"><br /><br>
+                &nbsp;<img src="\static\icon\spaghetti.png"><br /><br>
+                &nbsp;<img src="\static\icon\taco.png"><br /><br>
+                &nbsp;<img src="\static\icon\takoyaki.png"><br /><br>
+                &nbsp;<img src="\static\icon\tempura.png"><br /><br>
+                &nbsp;<img src="\static\icon\onigiri.png">
+        </td>
+        </td>
 
 </table>
-<nav style='width:auto;'>
-        <ul class="pagination">
-                <li class="page-item">
-                        {% if no != 1 %}
-                        <a class="page-link" href="?no={{subno}}" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                        </a>
-                        {% endif %}
-                </li>
-                <ul class="pagination">
-                        
-                        {% for i in ran10 %}
-                        
-                        {% if no == i %}
-                        <li class="page-item active" aria-current="page"><span class="page-link">{{i}}<span
-                                                class="sr-only"></span></span></li>
-                        {% else %}
-                        <li class="page-item"><a class="page-link" href="?no={{i}}">{{i}}</a></li>
-                        {% endif %}
-
-                        
-                        
-
-                        {% endfor %}
-                        
-                </ul>
-
-                <li class="page-item">
-                        {% if no != leng %}
-                        <a class="page-link" href="?no={{addno}}" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-
-
-                        </a>
-                        {% endif %}
-                </li>
-
-
-</nav>
 
 
 
