--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -1,38 +1,57 @@
 <!doctype html>
 {% extends 'rest/base.html' %}
 {% block content %}
-
-<div class="text-center" >
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto">
-      <div class="inner">
-        <div class="title">
-          <h1>R . I . P</h1>
-          <span class="byline">Restaurant In Program</span>
-        </div>
-        
+<body>
+    <table style='width:100%;' >
+        <td style='width:25%; text-align: center;'>
+        &nbsp;<img src="\static\icon\sashimi.png"><br><br>
+        &nbsp;<img src="\static\icon\burger.png"><br><br>
+        &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
+        &nbsp;<img src="\static\icon\kimchi.png"><br><br>
+        &nbsp;<img src="\static\icon\rice.png"><br/><br>
+        &nbsp;<img src="\static\icon\noodles.png">
+    </td>
+  </td>
+  <td>
+  <div class="text-center" >
+      <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="masthead mb-auto">
+          
+            <div class="title">
+              <font size="50em" face="바탕" color="Black">R . I . P <br>Restaurant&nbsp; In&nbsp; Program</font><br>
+            </div>
+            
+          
+        </header>
+    
+        <h3 class="cover-heading" style='margin-top:30px'>환영합니다!</h3>
+        <p class="lead"><img src="\static\icon\rice.png" width="60px" height="60px">&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄 사이트입니다! &nbsp;<img src="\static\icon\rice.png" width="60px" height="60px"></p>
+        <p class="lead">
+          <div class='container' width='600px' style='margin-top:20px'>
+    
+    
+            <!-- <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'"> -->
+            <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'">
+            
+          </div>
+          
+        </p>
+        </main>
+          <div class="inner">
+              <button class='btn btn-outline-dark' onclick="location.href='/rest/index'">페이지 둘러보기</button>
+          </div>
       </div>
-    </header>
+    </td>
+  <td style='width:25%; text-align: center;'>
+          &nbsp;<img src="\static\icon\rice.png"><br/><br>
+          &nbsp;<img src="\static\icon\spaghetti.png"><br/><br>
+          &nbsp;<img src="\static\icon\taco.png"><br/><br>
+          &nbsp;<img src="\static\icon\takoyaki.png"><br/><br>
+          &nbsp;<img src="\static\icon\tempura.png"><br/><br>
+          &nbsp;<img src="\static\icon\onigiri.png">
+  </td>
+</table>
 
-    <h3 class="cover-heading" style='margin-top:30px'>Welcome</h3>
-    <p class="lead">This is the site for your LunchTime more effective</p>
-    <p class="lead">
-      <div class='container' width='600px' style='margin-top:40px'>
-
-
-        <!-- <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'"> -->
-        <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'">
-        
-      </div>
-      
-    </p>
-    </main>
-
-    <footer class="mastfoot mt-auto">
-      <div class="inner">
-        <p>you will get enough time with this program </p>
-      </div>
-    </footer>
-  </div>
 </div>
+</body>
 {% endblock %}
