--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -6,38 +6,36 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-  <meta name="generator" content="Jekyll v3.8.6">
   <title>index</title>
   <link href="static/css/mystyle.css" rel="stylesheet" />
   <link href='/static/css/bootstrap.min.css' rel='stylesheet' />
   <link rel='icon' type='image/png' sizes='16x16' href='/static/icon/menu.png'>
-  <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/cover/">
-  <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-  <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
-  <link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-  <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
-  <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
-  <meta name="theme-color" content="#563d7c">
-  <link href="cover.css" rel="stylesheet">
+  <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      /* background-color: rgb(204, 185, 185); */
+      /* background-image: url('/Users/admin/Documents/GitHub/project/static/icon/두루치기.jpg'); */
+    }
+  </style>
 </head>
 
+<body>
+    <table style='width:100%;' >
+        <td style='width:25%; text-align: center;'>
+        &nbsp;<img src="\static\icon\sashimi.png"><br><br>
+        &nbsp;<img src="\static\icon\burger.png"><br><br>
+        &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
+        &nbsp;<img src="\static\icon\kimchi.png"><br><br>
+        &nbsp;<img src="\static\icon\rice.png"><br/><br>
+        &nbsp;<img src="\static\icon\noodles.png">
+    </td>
+    <td>
 <div class="text-center">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
       <div class="inner">
-        <div class='container'>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light"> </nav>
-          <h1>R.I.P</h1>
-          <h3>Restaurant In Program</h3>
-
-        </div>
+        <font size="50em" face="바탕" color="Black">R . I . P <br>Restaurant&nbsp; In&nbsp; Program</font><br>
+        
         <div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
@@ -52,40 +50,46 @@
       </div>
     </header>
     <main role="main" class="inner cover">
-      <div style='margin-top:120px;'>
+      <div style='margin-top:40px;'>
       </div>
-      <h3 class="cover-heading">Main Function</h3>
       <p class="lead">
-        <div class='container' width='600px'>
-
-
-          <button class='btn btn-outline-dark' onclick="location.href='/rest/board'">Board</button>
-          <table> - you can browse freely tons of Restaurant in Busan Univ.</table>
-          <div style='margin-top:80px'></div>
-          <button class='btn btn-outline-dark' onclick="location.href='/rest/search'">Search</button>
-          <table> - you can choose category of Restaurant and distance.</table>
-          <div style='margin-top:150px'></div>
-          <a
-            href="https://www.google.com/search?sxsrf=ACYBGNQwGHCR88DUXarzwLova0DaFfyQ9w:1576212469927&q=%EA%B3%A0%EB%B4%89%EA%B9%80%EB%B0%A5+%EB%B6%80%EC%82%B0%EB%8C%80%EC%97%AD&npsic=0&rflfq=1&rlha=0&rllag=35234102,129089877,584&tbm=lcl&ved=2ahUKEwjZ8fCC6bHmAhVhG6YKHRkHC-AQtgN6BAgLEAQ&tbs=lrf:!3sIAE,lf:1,lf_ui:4&rldoc=1"><img
-              src="\static\icon\sashimi.png"></a>
-          <a
-            href="https://www.google.com/search?tbm=lcl&sxsrf=ACYBGNTCnh1XdsDGjlxh1xw0zm6KjXZJBQ%3A1576212473795&ei=-RfzXbeGMMmRr7wPweeEiA4&q=%EB%A7%98%EC%8A%A4%ED%84%B0%EC%B9%98+%EB%B6%80%EC%82%B0%EB%8C%80%EC%A0%90&oq=%EB%A7%98%EC%8A%A4%ED%84%B0%EC%B9%98+%EB%B6%80%EC%82%B0%EB%8C%80%EC%A0%90&gs_l=psy-ab.3...44495.51585.0.51788.22.14.0.0.0.0.265.1540.0j7j2.10.0....0...1c.1j4.64.psy-ab..18.4.680.10..0j35i39k1j0i20i263k1j0i131k1j35i362i39k1j0i67k1.139.Drsy_yx1Smc"><img
-              src="\static\icon\burger.png"></a>
-          <a
-            href="https://www.google.com/maps/dir/35.1250512,129.0398118/%EC%BD%94%ED%95%98%EB%A3%A8/@35.2261571,129.0840031,15.5z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x356893eb815b9ead:0x20bd154168b6eb59!2m2!1d129.0874216!2d35.231994"><img
-              src="\static\icon\bibimbap.png"></a>
-          <a href="board"><img src="\static\icon\kimchi.png"></a>
-
+        <div class='container' width='600px' >
+            <img type='image/png' width="60" height="60" src='/static/icon/menu2.png'/>&nbsp;
+            <font size="30em" face="" color="Black" >주요기능</font>
+            <img type='image/png' width="60" height="60" src='/static/icon/menu2.png'/>&nbsp;<br>
+            <div style='margin-top:40px'></div>
+          <button class='btn btn-outline-dark' onclick="location.href='/rest/board'">리스트</button>
+          <button class='btn btn-outline-dark'>부산대 주변 모든 음식점을 보실 수 있습니다.</button>
+          <div style='margin-top:50px'></div>
+          <button class='btn btn-outline-dark' onclick="location.href='/rest/search'">필터링</button>
+          <button class='btn btn-outline-dark'>식당 카테고리와 거리를 선택할 수 있습니다.</button>
+          <div style='margin-top:150px'></div></div>
+          <div>
+          <a href="https://www.google.com/search?sxsrf=ACYBGNQwGHCR88DUXarzwLova0DaFfyQ9w:1576212469927&q=%EA%B3%A0%EB%B4%89%EA%B9%80%EB%B0%A5+%EB%B6%80%EC%82%B0%EB%8C%80%EC%97%AD&npsic=0&rflfq=1&rlha=0&rllag=35234102,129089877,584&tbm=lcl&ved=2ahUKEwjZ8fCC6bHmAhVhG6YKHRkHC-AQtgN6BAgLEAQ&tbs=lrf:!3sIAE,lf:1,lf_ui:4&rldoc=1">
+            <img src="\static\icon\sashimi.png"></a>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.google.com/search?tbm=lcl&sxsrf=ACYBGNTCnh1XdsDGjlxh1xw0zm6KjXZJBQ%3A1576212473795&ei=-RfzXbeGMMmRr7wPweeEiA4&q=%EB%A7%98%EC%8A%A4%ED%84%B0%EC%B9%98+%EB%B6%80%EC%82%B0%EB%8C%80%EC%A0%90&oq=%EB%A7%98%EC%8A%A4%ED%84%B0%EC%B9%98+%EB%B6%80%EC%82%B0%EB%8C%80%EC%A0%90&gs_l=psy-ab.3...44495.51585.0.51788.22.14.0.0.0.0.265.1540.0j7j2.10.0....0...1c.1j4.64.psy-ab..18.4.680.10..0j35i39k1j0i20i263k1j0i131k1j35i362i39k1j0i67k1.139.Drsy_yx1Smc">
+            <img src="\static\icon\burger.png"></a>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.google.com/maps/dir/35.1250512,129.0398118/%EC%BD%94%ED%95%98%EB%A3%A8/@35.2261571,129.0840031,15.5z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x356893eb815b9ead:0x20bd154168b6eb59!2m2!1d129.0874216!2d35.231994">
+            <img src="\static\icon\bibimbap.png"></a>&nbsp;&nbsp;&nbsp;
+          <a href="board"><img src="\static\icon\kimchi.png"></a>&nbsp;&nbsp;&nbsp;
         </div>
 
       </p>
     </main>
     <div>
-      <p>you will get enough time with this program </p>
     </div>
     </footer>
   </div>
 </div>
-
-
+</td>
+<td style='width:25%; text-align: center;'>
+    &nbsp;<img src="\static\icon\rice.png"><br/><br>
+    &nbsp;<img src="\static\icon\spaghetti.png"><br/><br>
+    &nbsp;<img src="\static\icon\taco.png"><br/><br>
+    &nbsp;<img src="\static\icon\takoyaki.png"><br/><br>
+    &nbsp;<img src="\static\icon\tempura.png"><br/><br>
+    &nbsp;<img src="\static\icon\onigiri.png">
+</td>
+</body>
+</html>
 {% endblock %}
