--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -6,51 +6,91 @@
 <body>
     <table style='width:100%;' >
             <td style='width:25%; text-align: center;'>
-            &nbsp;<img src="\static\icon\sashimi.png"><br>
-            &nbsp;<img src="\static\icon\burger.png"><br>
-            &nbsp;<img src="\static\icon\bibimbap.png"><br>
-            &nbsp;<img src="\static\icon\kimchi.png"><br>
+            &nbsp;<img src="\static\icon\sashimi.png"><br><br>
+            &nbsp;<img src="\static\icon\burger.png"><br><br>
+            &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
+            &nbsp;<img src="\static\icon\kimchi.png"><br><br>
+            &nbsp;<img src="\static\icon\rice.png"><br/><br>
             &nbsp;<img src="\static\icon\noodles.png">
         </td>
         <td style='width:50%; text-align: center; vertical-align:top;'>
-
-            <div class="container" align='center' style='margin-top:150px'>
-            <h2 style="width:400px">Detail 1-Select Food Style</h2>
+                <img src="\static\icon\삼겹살.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="\static\icon\감자튀김.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="\static\icon\김치찌개.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="\static\icon\낚지볶음.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="\static\icon\삼겹살.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="\static\icon\두루치기.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div class="container" align='center' style='margin-top:150px; width:700px'>
+            <button type="button" style="width:370px; height:50px;" class="btn btn-secondary">음식 카테고리를 선택하세요 (복수선택 가능)</button>
             <div style='margin-top:30px'></div>
             <div class='input_chk' style="width:700px"> 
-                <input type="checkbox" id='kor' class='chk'required>
-                <label for='check' id='kor' style="font-size:1.5em; color: #ff9a01;" >Korean</label>&nbsp;&nbsp;
 
                 <input type="checkbox" id='cna' class='chk'required>
-                <label for='check' id='cna' style="font-size:1.5em; color: #ff9a01;">Chinese</label>&nbsp;&nbsp;
+                <label for='check' id='cna' style="font-size:1.2em;">한식</label>&nbsp;&nbsp;
 
                 <input type="checkbox" id='jpn' class='chk'required>
-                <label for='check' id='jpn' style="font-size:1.5em; color: #ff9a01;">Japanese</label>&nbsp;&nbsp;
+                <label for='check' id='jpn' style="font-size:1.2em;">중식</label>&nbsp;&nbsp;
 
                 <input type="checkbox" id='ame' class='chk'required>
-                <label for='check' id='ame' style="font-size:1.5em; color: #ff9a01;">American</label>&nbsp;&nbsp;
+                <label for='check' id='jpn' style="font-size:1.2em;">양식</label>&nbsp;&nbsp;
 
                 <input type="checkbox" id='etc' class='chk'required>
-                <label for='check' id='etc' style="font-size:1.5em; color: #ff9a01;">Etc</label>
+                <label for='check' id='jpn' style="font-size:1.2em;">일식</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">간식</label><br><br>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">도시락</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">분식</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">뷔페</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">아시아음식</label><br><br>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">술집</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">치킨</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">패밀리 레스토랑</label><br><br>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">패스트푸드</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">퓨전요리</label>
+
+                <input type="checkbox" id='etc' class='chk'required>
+                <label for='check' id='jpn' style="font-size:1.2em;">카페</label>
+
+
             </div>
                 <div style='margin-top:70px'></div>
-                <h2 style="width:500px">Detail 2-Distance</h2>
-                <select name="detail" style="width:80px">
-                    <option value="50">50m</option>
+                <button type="button" style="width:180px; height:50px;" class="btn btn-secondary">거리를 설정하세요.</button><br>
+                <select name="detail" style="width:80px; margin-top:30px;">
                     <option value="100">100m</option>
                     <option value="200">200m</option>
                     <option value="300">300m</option>
-                </select>&nbsp;&nbsp;
+                    <option value="400">400m</option>
+                    <option value="500">500m</option>
+                </select >&nbsp;<br><br>
                 
-                <button class = 'btn btn-outline-dark'  onclick="location.href='/rest/detail'" >Search</button> &nbsp;&nbsp;
+                <button class = 'btn btn-outline-dark'  onclick="location.href='/rest/detail'" >통합검색</button> &nbsp;&nbsp;
     </td>
     <td style='width:25%; text-align: center;'>
-            &nbsp;<img src="\static\icon\rice.png"><br/>
-            &nbsp;<img src="\static\icon\spaghetti.png"><br/>
-            &nbsp;<img src="\static\icon\taco.png"><br/>
-            &nbsp;<img src="\static\icon\takoyaki.png"><br/>
-            &nbsp;<img src="\static\icon\tempura.png"><br/>
-            &nbsp;<img src="\static\icon\onigiri.png"><br/>
+            &nbsp;<img src="\static\icon\rice.png"><br/><br>
+            &nbsp;<img src="\static\icon\spaghetti.png"><br/><br>
+            &nbsp;<img src="\static\icon\taco.png"><br/><br>
+            &nbsp;<img src="\static\icon\takoyaki.png"><br/><br>
+            &nbsp;<img src="\static\icon\tempura.png"><br/><br>
+            &nbsp;<img src="\static\icon\onigiri.png">
     </td>
         </div>
         </div>
