--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -62,7 +62,7 @@
             <a class="nav-link" href="index">기능</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="board?no=1&search_word=" aria-disabled="true">Board</a>
+            <a class="nav-link" href="board?no=1&search_word=" aria-disabled="true">목록</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="search">검색</a>
